--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1><a href="/">🔥 FireGuides</a></h1>
+    <h1><a href="/">FireGuides</a></h1>
     <nav>
       <a href="/tutorials/">All Tutorials</a>
     </nav>
