--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -7,7 +7,7 @@
   <meta name="description" content="{{ .Site.Params.description }}">
 
   <!-- Default theme CSS -->
-  
+  <link rel="stylesheet" href="{{ "css/styles.css" | relURL }}">
 
   <!-- Custom CSS from assets -->
   {{ $customCSS := resources.Get "css/custom.css" | resources.Minify | resources.Fingerprint }}
