--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -5,8 +5,8 @@
   <title>{{ if .Title }}{{ .Title }} | {{ end }}{{ .Site.Title }}</title>
 
   <!-- Theme CSS (keeps layout/fonts) -->
-  <link rel="stylesheet" href="{{ "css/main.css" | relURL }}">
+  <link rel="stylesheet" href="{{ "static/css/main.css" | relURL }}">
 
   <!-- Your Custom Dark Theme CSS (overrides theme styles) -->
-  <link rel="stylesheet" href="{{ "css/custom.css" | relURL }}">
+  <link rel="stylesheet" href="{{ "static/css/custom.css" | relURL }}">
 </head>
