--- a/themes/mytheme/layouts/_default/baseof.html
+++ b/themes/mytheme/layouts/_default/baseof.html
@@ -1,19 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    {{ partial "head.html" . }}
-  </head>
+  {{ partial "head.html" . }}
   <body>
-    <header>
-      <h1>{{ .Site.Title }}</h1>
-    </header>
-
+    {{ partial "header.html" . }}
+    
     <main>
       {{ block "main" . }}{{ end }}
     </main>
 
-    <footer>
-      {{ partial "footer.html" . }}
-    </footer>
+    {{ partial "footer.html" . }}
   </body>
 </html>
